tests/errors/parser-errors/atblock/at_block_unclosed_body_keyword.smark
@_tag_@;
body
@_ marker_@
